--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "apollo-server-express": "^2.23.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "graphql": "^15.5.0",
     "rss-parser": "^3.10.0"
   }
 }
