--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.22",
     "@vercel/node": "^1.9.0",
+    "fuse.js": "^6.4.6",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
