--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An api to display news in Indonesia",
   "main": "index.js",
   "scripts": {
+    "dev": "ts-node ./api/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
