--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node ./api/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepare": "husky install",
+    "format": "prettier --write ./**/*.ts"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   },
   "keywords": [
     "news-api",
@@ -19,11 +23,15 @@
   "author": "Satya Wikananda",
   "license": "MIT",
   "devDependencies": {
+    "@satyawikananda/prettier-config": "^0.0.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^14.18.12",
     "@vercel/node": "^1.13.0",
     "fuse.js": "^6.5.3",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.4",
+    "prettier": "^2.5.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.6.2"
   },
