--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-json-view": "^1.21.3",
+    "react-tweet": "^3.0.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "vaul": "^0.1.0"
